Fixing up test